--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -80,6 +80,7 @@
 		"eslint": "^9.12.0",
 		"eslint-plugin-jest-dom": "^5.4.0",
 		"eslint-plugin-react": "^7.37.1",
+		"eslint-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.9",
 		"eslint-plugin-storybook": "^0.11.0",
