--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -76,6 +76,7 @@
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
 		"@vitejs/plugin-react-swc": "^3.5.0",
+		"@vitest/coverage-v8": "^2.1.4",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.12.0",
 		"eslint-plugin-jest-dom": "^5.4.0",
